--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
     "argon2": "^0.30.3",
+    "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.1",
