--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,13 +24,15 @@
     "@lexical/react": "^0.11.1",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "styled-components": "^6.0.4"
   },
   "devDependencies": {
     "@capacitor/cli": "5.1.1",
