--- a/api/package.json
+++ b/api/package.json
@@ -49,7 +49,8 @@
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "svgson": "^5.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.9",
