--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,7 @@
     "@nestjs/core": "^10.0.5",
     "@nestjs/graphql": "^12.0.7",
     "@nestjs/platform-express": "^10.0.5",
+    "@nestjs/serve-static": "^4.0.0",
     "@types/argon2": "^0.15.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/pg": "^8.10.2",
@@ -43,6 +44,7 @@
     "apollo-server-express": "^3.12.0",
     "argon2": "^0.30.3",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "graphql": "^16.7.1",
     "graphql-upload-ts": "^2.0.9",
     "jsonwebtoken": "^9.0.1",
