--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,7 +2,7 @@ name: Build, Dockerize, Upload
 on:
   push:
     branches:
-      - dev
+      - workflow
 
 jobs:
   package:
@@ -17,24 +17,17 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps
+      - name: Install dependencies for frontend
+        run: cd frontend && npm install
 
-      - name: Install Nest
-        run: npm i -g @nestjs/cli
+      - name: Build frontend
+        run: cd frontend && npm run build
 
-      - name: Build
-        run: nest build
+      - name: Install dependencies for api
+        run: cd api && yarn install
 
-      # - name: Configure AWS Credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_GITHUB_S3_PUSHER_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
-      #     aws-region: us-east-2
-
-      - name: Dockerize
-        run: docker build -t etenlab/cpg-server .
+      - name: Build api
+        run: cd api && yarn run build
 
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -46,32 +39,25 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: etenlab/cpg-server
+          images: etenlab/crowd-rocks
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
           push: true
-          tags: etenlab/cpg-server:latest
+          tags: etenlab/crowd-rocks:latest
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_GITHUB_S3_PUSHER_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+      # - name: Download task definition
+      #   run: |
+      #     aws ecs describe-task-definition --task-definition cpgServer \
+      #     --query taskDefinition > task-definition.json
 
-      - name: Download task definition
-        run: |
-          aws ecs describe-task-definition --task-definition cpgServer \
-          --query taskDefinition > task-definition.json
-
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          service: cpgServerService
-          cluster: dev-cluster
-          wait-for-service-stability: true
+      # - name: Deploy Amazon ECS task definition
+      #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      #   with:
+      #     task-definition: task-definition.json
+      #     service: cpgServerService
+      #     cluster: dev-cluster
+      #     wait-for-service-stability: true
