--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,6 +32,13 @@ jobs:
           tags: etenlab/crowd-rocks:latest
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_GITHUB_S3_PUSHER_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
       - name: Download task definition
         run: |
           aws ecs describe-task-definition --task-definition crowdrocksApiServer \
