--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -48,6 +48,6 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: task-definition.json
-          service: crowdrocksApiServer
+          service: crowdrocksApiServerService
           cluster: dev-cluster
           wait-for-service-stability: true
