--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "@aws-sdk/client-s3": "^3.367.0",
     "@aws-sdk/client-sesv2": "^3.363.0",
     "@aws-sdk/hash-node": "^3.357.0",
+    "@aws-sdk/lib-storage": "^3.395.0",
     "@aws-sdk/protocol-http": "^3.357.0",
     "@aws-sdk/s3-request-presigner": "^3.367.0",
     "@aws-sdk/url-parser": "^3.357.0",
@@ -49,6 +50,7 @@
     "graphql-upload-ts": "^2.0.9",
     "jsonwebtoken": "^9.0.1",
     "language-tags": "^1.0.8",
+    "nanoid": "^3.3.6",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
