--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -2,7 +2,7 @@ name: Build, Dockerize, Upload
 on:
   push:
     branches:
-      - translation-ui-tweak
+      - prod
 
 jobs:
   package:
@@ -32,7 +32,7 @@ jobs:
           tags: etenlab/crowd-rocks:latest
           labels: ${{ steps.meta.outputs.labels }}
           build-args:
-            BUILD_MODE: staging
+            BUILD_MODE: production
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -51,5 +51,5 @@ jobs:
         with:
           task-definition: task-definition.json
           service: crowdrocksApiServerService
-          cluster: dev-cluster
+          cluster: prod-cluster
           wait-for-service-stability: true
