--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         run: cd frontend && npm install
 
       - name: Build frontend
-        run: cd frontend && npm run build
+        run: cd frontend && npm run build:staging
 
       - name: Install dependencies for api
         run: cd api && yarn install
