--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -31,7 +31,7 @@ jobs:
           push: true
           tags: etenlab/crowd-rocks:latest
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: BUILD_MODE=production
+          build-args: BUILD_MODE="production"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
