--- a/infra/config/prod.yaml
+++ b/infra/config/prod.yaml
@@ -31,7 +31,7 @@ dbSecurityGroupSsmParam: '/prod/db-sg-id'
 dbCredentialSecret: 'prod/db/credentials'
 
 # Whether database is accessible outside of VPC
-dbPublicAccess: false
+dbPublicAccess: true
 
 # DNS setup
 dns:
