chore: build docker for dev mode

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -22,14 +22,14 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: etenlab/crowd-rocks
+          images: etenlab/dev-crowd-rocks
 
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
           push: true
-          tags: etenlab/crowd-rocks:latest
+          tags: etenlab/dev-crowd-rocks:latest
           labels: ${{ steps.meta.outputs.labels }}
           build-args: BUILD_MODE=staging
 
