--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: etenlab/crowd-rocks:prod
+          tags: etenlab/crowd-rocks:latest
           labels: ${{ steps.meta.outputs.labels }}
           build-args: BUILD_MODE=production
 
