used correct docker image tags

--- a/infra/config/dev.yaml
+++ b/infra/config/dev.yaml
@@ -44,7 +44,7 @@ apiService:
   priority: 10
   rootdomain: 'dev.crowd.rocks'
   serviceName: 'crowdrocksApiServer'
-  dockerImageUrl: 'etenlab/crowd-rocks'
+  dockerImageUrl: 'etenlab/crowd-rocks:dev'
   cpu: 2048
   memory: 4096
   healthCheckPath: '/'
