--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/s3-request-presigner": "^3.367.0",
     "@aws-sdk/url-parser": "^3.357.0",
     "@aws-sdk/util-format-url": "^3.363.0",
+    "@google-cloud/translate": "^8.0.1",
     "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^10.0.5",
     "@nestjs/core": "^10.0.5",
