--- a/api/.env.example
+++ b/api/.env.example
@@ -3,7 +3,14 @@ CR_DB_URL=localhost
 CR_DB=crowdrocks
 CR_DB_PASSWORD=asdfasdf
 CR_DB_PORT=5434
+
+AWS_S3_REGION=us-east-2
+AWS_S3_BUCKET_NAME=eil-public-files-dev
+AWS_S3_ACCESS_ID=****
+AWS_S3_SECRET_KEY=***
+
 AWS_ACCESS_KEY_ID=asdf
 AWS_SECRET_ACCESS_KEY=asdf
 AWS_REGION=us-east-2
+
 EMAIL_SERVER=asdf
