default to not log http request

--- a/api/.env.example
+++ b/api/.env.example
@@ -10,7 +10,7 @@ AWS_REGION=us-east-2
 AWS_S3_REGION=us-east-2
 AWS_S3_BUCKET_NAME=crowdrocks-public-files-dev
 
-HTTP_LOGGING=true
+HTTP_LOGGING=false
 
 EMAIL_SERVER=asdf
 
