--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-quill": "^2.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "react-virtuoso": "^4.5.1",
     "styled-components": "^6.0.4",
     "use-debounce": "^9.0.4"
   },
