--- a/api/package.json
+++ b/api/package.json
@@ -49,6 +49,7 @@
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "graphql-upload-ts": "^2.0.9",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.1",
     "language-tags": "^1.0.8",
     "nanoid": "^3.3.0",
@@ -63,6 +64,7 @@
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.1.0",
     "@types/express": "^4.17.13",
+    "@types/html-to-text": "^9.0.1",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
