feat: docker config to enable logs

--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       POSTGRES_DB: crowdrocks
     ports:
       - "5434:5432"
+    command: ["postgres", "-c", "log_statement=all"]
 
   pgadmin:
     image: dpage/pgadmin4
