--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@capacitor/haptics": "5.0.5",
     "@capacitor/keyboard": "5.0.5",
     "@capacitor/status-bar": "5.0.5",
+    "@foobar404/wave": "^2.0.4",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
     "@lexical/react": "^0.11.1",
@@ -39,7 +40,8 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "styled-components": "^6.0.4",
-    "use-debounce": "^9.0.4"
+    "use-debounce": "^9.0.4",
+    "wavesurfer.js": "^7.3.2"
   },
   "devDependencies": {
     "@capacitor/cli": "5.1.1",
