--- a/api/package.json
+++ b/api/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload-ts": "^2.0.9",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.1",
