--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,11 +55,13 @@
     "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@playwright/test": "^1.38.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/apollo-upload-client": "^17.0.2",
     "@types/language-tags": "^1.0.1",
+    "@types/node": "^20.6.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-infinite-scroller": "^1.2.3",
