--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-virtuoso": "^4.5.1",
+    "react-zoom-pan-pinch": "^3.1.0",
     "styled-components": "^6.0.4",
     "use-debounce": "^9.0.4",
     "wavesurfer.js": "^7.3.2"
