--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,29 +1,90 @@
 name: Pre-Test Workflow
 on:
   pull_request:
-    branches: [dev]
+    branches: [dev, prod, test]
     types: [opened, synchronize, reopened]
 
 jobs:
-  buildable-test:
+  test-buildable:
+    - name: Checkout
+      uses: actions/checkout@v1
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      with:
+        images: etenlab/crowd-rocks
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      with:
+        context: .
+        push: true
+        tags: etenlab/crowd-rocks:test
+        labels: ${{ steps.meta.outputs.labels }}
+        build-args: BUILD_MODE=test
+
+  test-api-e2e:
     runs-on: ubuntu-latest
+    needs: test-buildable
     steps:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Prepare Node 16
-        uses: actions/setup-node@v3
+      - uses: isbang/compose-action@v1.4.1
+        with:
+          compose-file: "./.github/docker/docker-compose.yml"
+          down-flags: "--volumes"
+          services: |
+            postgres
+
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: Install dependencies for frontend
-        run: cd frontend && npm install
-
-      - name: Build frontend
-        run: cd frontend && npm run build:staging
-
       - name: Install dependencies for api
-        run: cd api && yarn install
+      - run: cd api && yarn install
 
-      - name: Build api
-        run: cd api && yarn run build
+      - name: Test
+        run: cd api && yarn test:e2e
+
+  test-frontend-playwright:
+    runs-on: ubuntu-latest
+    needs: [test-buildable, test-api-e2e]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - uses: isbang/compose-action@v1.4.1
+        with:
+          compose-file: "./.github/docker/docker-compose.yml"
+          down-flags: "--volumes"
+          services: |
+            postgres
+            api
+
+      - name: Install dependences
+      - run: cd frontend && npm ci --force
+
+      - name: Install Playwright Browsers
+        run: cd frontend && npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: cd frontend && npx playwright test
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
