--- a/api/.env.example
+++ b/api/.env.example
@@ -4,7 +4,7 @@ CR_DB=crowdrocks
 CR_DB_PASSWORD=asdfasdf
 CR_DB_PORT=5434
 
-CR_ADMIN_PASSWORD=asdfasdf
+ADMIN_PASSWORD=asdfasdf
 
 AWS_ACCESS_KEY_ID=asdf
 AWS_SECRET_ACCESS_KEY=asdf
