--- a/.github/docker/docker-compose.yml
+++ b/.github/docker/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
 
 services:
   postgres:
-    image: postgres:14.5
+    image: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: asdfasdf
