--- a/api/.env.example
+++ b/api/.env.example
@@ -5,6 +5,8 @@ CR_DB_PASSWORD=asdfasdf
 CR_GOOGLE_BOT_PASSWORD=asdfasdf
 CR_DB_PORT=5434
 
+CR_LILT_KEY=asdfasdf
+
 ADMIN_PASSWORD=asdfasdf
 
 AWS_ACCESS_KEY_ID=asdf
