--- a/api/.env.example
+++ b/api/.env.example
@@ -5,7 +5,9 @@ CR_DB_PASSWORD=asdfasdf
 CR_GOOGLE_BOT_PASSWORD=asdfasdf
 CR_DB_PORT=5434
 
-CR_LILT_KEY=asdfasdf
+LILT_KEY=asdfasdf
+SMARTCAT_USER=asdfasdf
+SMARTCAT_KEY=asdfasdf
 
 ADMIN_PASSWORD=asdfasdf
 
