--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,15 @@
     "@capacitor/haptics": "5.0.5",
     "@capacitor/keyboard": "5.0.5",
     "@capacitor/status-bar": "5.0.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/poppins": "^5.0.8",
+    "@fontsource/roboto": "^5.0.8",
     "@foobar404/wave": "^2.0.4",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
     "@lexical/react": "^0.11.1",
+    "@mui/material": "^5.14.12",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
