wip: now have problem with Not enough Smartwords. Waiting for support.

--- a/api/.env.example
+++ b/api/.env.example
@@ -6,8 +6,9 @@ CR_GOOGLE_BOT_PASSWORD=asdfasdf
 CR_DB_PORT=5434
 
 LILT_KEY=asdfasdf
-SMARTCAT_USER=asdfasdf
+SMARTCAT_ID=--smartcat-user-id-like-083XXXad-02X5-44X6-9fX7-e82bXXX1006
 SMARTCAT_KEY=asdfasdf
+SMARTCAT_PROFILE=--ID-from-smarttranslation-profile-url--
 
 ADMIN_PASSWORD=asdfasdf
 
