--- a/api/.env.example
+++ b/api/.env.example
@@ -4,6 +4,8 @@ CR_DB=crowdrocks
 CR_DB_PASSWORD=asdfasdf
 CR_GOOGLE_BOT_PASSWORD=asdfasdf
 CR_DB_PORT=5434
+CR_GPT_3_PASSWORD=asdfasdf
+CR_GPT_4_PASSWORD=asdfasdf
 
 LILT_KEY=asdfasdf
 SMARTCAT_USER=asdfasdf
