--- a/api/package.json
+++ b/api/package.json
@@ -45,6 +45,7 @@
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
     "argon2": "^0.30.3",
+    "deepl-node": "^1.10.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
