fix: .env, .env.example

--- a/api/.env.example
+++ b/api/.env.example
@@ -8,9 +8,12 @@ CR_GPT_3_PASSWORD=asdfasdf
 CR_GPT_4_PASSWORD=asdfasdf
 
 LILT_KEY=asdfasdf
+
 SMARTCAT_ID=--smartcat-user-id-like-083XXXad-02X5-44X6-9fX7-e82bXXX1006
 SMARTCAT_KEY=asdfasdf
 SMARTCAT_PROFILE=--ID-from-smarttranslation-profile-url--
+
+DEEPL_KEY=asdfasdf
 
 ADMIN_PASSWORD=asdfasdf
 
