--- a/infra/config/dev.yaml
+++ b/infra/config/dev.yaml
@@ -56,6 +56,7 @@ apiService:
     CR_DB: dbname
     CR_DB_PORT: port
   appSecrets:
+    ADMIN_PASSWORD: ADMIN_PASSWORD
     DEEPL_KEY: DEEPL_KEY
     SMARTCAT_PROFILE: SMARTCAT_PROFILE
     SMARTCAT_KEY: SMARTCAT_KEY
