--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
     "@types/argon2": "^0.15.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/pg": "^8.10.2",
+    "adm-zip": "^0.5.10",
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
     "argon2": "^0.30.3",
@@ -62,7 +63,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.1",
     "rxjs": "^7.8.1",
-    "svgson": "^5.3.1"
+    "svgson": "^5.3.1",
+    "temp": "^0.9.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.9",
