--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 155.138.138.222",
     "build:test": "tsc && vite build --mode test",
     "build:local": "tsc && vite build --mode local-dev",
     "build:staging": "tsc && vite build --mode staging",
@@ -39,6 +39,7 @@
     "apollo-upload-client": "^17.0.0",
     "ionicons": "^7.0.0",
     "language-tags": "^1.0.8",
+    "nanoid": "^5.0.2",
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
