--- a/api/package.json
+++ b/api/package.json
@@ -70,6 +70,7 @@
     "@nestjs/cli": "^10.1.9",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.1.0",
+    "@types/adm-zip": "^0.5.2",
     "@types/express": "^4.17.13",
     "@types/html-to-text": "^9.0.1",
     "@types/jest": "28.1.8",
