fix: .env.example

--- a/api/.env.example
+++ b/api/.env.example
@@ -22,6 +22,7 @@ AWS_SECRET_ACCESS_KEY=asdf
 AWS_REGION=us-east-2
 AWS_S3_REGION=us-east-2
 AWS_S3_BUCKET_NAME=crowdrocks-public-files-dev
+AWS_S3_TEMPORARY_BUCKET_NAME=crowdrocks-public-files-dev-temp10min
 
 HTTP_LOGGING=false
 
