--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "include": [
     "src",
-    "types"
+    "types",
+    "test"
   ],
   "compilerOptions": {
     "module": "esnext",
