--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,8 @@ jobs:
         with:
           node-version: 16
 
+      - run: cd utils && npm install
+
       - run: cd api && cp .env.example .env && yarn install
 
       - name: Test
