--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           node-version: 16
 
-      - run: cd utils && npm ci
+      - run: cd utils && npm ci && npm run build
 
       - run: cd api && cp .env.example .env && yarn install
 
@@ -79,7 +79,7 @@ jobs:
             postgres
             api
 
-      - run: cd utils && npm ci
+      - run: cd utils && npm ci && npm run build
         
       - run: cd frontend && npm ci --force
 
