add apollo3-cache-persist that will persist cache to window.localStorage.This will keep the manually triggered refreshes from completely wiping out apollo caching so that when apollo refreshes its cache it won't throw a undefined error

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "apollo-upload-client": "^17.0.0",
+    "apollo3-cache-persist": "^0.14.1",
     "ionicons": "^7.0.0",
     "language-tags": "^1.0.8",
     "nanoid": "^5.0.2",
