--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,7 +85,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^22.1.0",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
+    "vite": "4.5.0",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.32.2"
   },
