set 7 days backups in prod

--- a/infra/config/dev.yaml
+++ b/infra/config/dev.yaml
@@ -34,6 +34,7 @@ appSecrets: 'dev/crowdrocksApiServer/secrets'
 
 # Whether database is accessible outside of VPC
 dbPublicAccess: true
+dbBackupRetentionDays: 1
 
 # DNS setup
 dns:
