--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,5 +93,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: test-results/
+          path: ${{ github.workspace }}/test-results/
           retention-days: 30
