feat: add cache bursting

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build:test": "tsc && vite build --mode test",
     "build:local": "tsc && vite build --mode local-dev",
-    "build:staging": "tsc && vite build --mode staging",
+    "build:staging": "node generate-build-version && tsc && vite build --mode staging",
     "build:prod": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{ts,tsx,md,mdx,js,jsx}\"",
     "preview": "vite preview",
