change: package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build:test": "node ./generate-build-version.js && tsc && vite build --mode test",
-    "build:local": "node ./generate-build-version.js && tsc && vite build --mode local-dev",
-    "build:staging": "node ./generate-build-version.js && tsc && vite build --mode staging",
-    "build:prod": "node ./generate-build-version.js && tsc && vite build",
+    "generate-build-version": "node generate-build-version",
+    "prebuild": "npm run generate-build-version",
+    "build:test": "tsc && vite build --mode test",
+    "build:local": "tsc && vite build --mode local-dev",
+    "build:staging": "tsc && vite build --mode staging",
+    "build:prod": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{ts,tsx,md,mdx,js,jsx}\"",
     "preview": "vite preview",
     "test.e2e": "cypress run",
