--- a/.github/docker/docker-compose.yml
+++ b/.github/docker/docker-compose.yml
@@ -25,6 +25,9 @@ services:
       MODE: DEV
       OPENAI_API_KEY: asdf
       DEEPL_KEY: asdf
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_REGION: ${AWS_REGION}
     ports:
       - 3000:3000
     depends_on:
