--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,6 +99,8 @@ jobs:
       - name: Run Playwright tests
         run: cd frontend && npx playwright test
 
+      - run: docker-compose -f "./.github/docker/docker-compose.yml" logs
+
       - uses: actions/upload-artifact@v3
         if: always()
         with:
