--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,7 +69,7 @@ jobs:
 
   test-frontend-playwright:
     runs-on: ubuntu-latest
-    needs: test-buildable
+    # needs: test-buildable
     steps:
       - name: Checkout
         uses: actions/checkout@v1
