--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,64 +8,64 @@ on:
       - "frontend/**"
 
 jobs:
-  test-buildable:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+  # test-buildable:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v1
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Log in to Docker Hub
+  #       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_GITHUB_S3_PUSHER_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_GITHUB_S3_PUSHER_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
+  #         aws-region: us-east-2
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: etenlab/crowd-rocks
+  #     - name: Extract metadata (tags, labels) for Docker
+  #       id: meta
+  #       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+  #       with:
+  #         images: etenlab/crowd-rocks
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          context: .
-          push: true
-          tags: etenlab/crowd-rocks:test
-          labels: ${{ steps.meta.outputs.labels }}
-          build-args: BUILD_MODE=test
+  #     - name: Build and push Docker image
+  #       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+  #       with:
+  #         context: .
+  #         push: true
+  #         tags: etenlab/crowd-rocks:test
+  #         labels: ${{ steps.meta.outputs.labels }}
+  #         build-args: BUILD_MODE=test
 
-  test-api-e2e:
-    runs-on: ubuntu-latest
-    needs: test-buildable
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+  # test-api-e2e:
+  #   runs-on: ubuntu-latest
+  #   needs: test-buildable
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v1
 
-      - uses: isbang/compose-action@v1.4.1
-        with:
-          compose-file: "./.github/docker/docker-compose.yml"
-          down-flags: "--volumes"
-          services: |
-            postgres
+  #     - uses: isbang/compose-action@v1.4.1
+  #       with:
+  #         compose-file: "./.github/docker/docker-compose.yml"
+  #         down-flags: "--volumes"
+  #         services: |
+  #           postgres
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 16
 
-      - run: cd utils && npm ci
+  #     - run: cd utils && npm ci
 
-      - run: cd api && cp .env.example .env && yarn install
+  #     - run: cd api && cp .env.example .env && yarn install
 
-      - name: Test
-        run: cd api && yarn test:e2e
+  #     - name: Test
+  #       run: cd api && yarn test:e2e
 
   test-frontend-playwright:
     runs-on: ubuntu-latest
