--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,7 +87,6 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-2
 
-      - run: docker-compose -f "./.github/docker/docker-compose.yml" logs
 
       - run: cd utils && npm ci
         
@@ -96,10 +95,17 @@ jobs:
       - name: Install Playwright Browsers
         run: cd frontend && npx playwright install --with-deps
 
+      - name: Show logs before Playwright tests
+        run: docker-compose -f "./.github/docker/docker-compose.yml" logs
+
       - name: Run Playwright tests
         run: cd frontend && npx playwright test
 
-      - run: docker-compose -f "./.github/docker/docker-compose.yml" logs
+      - uses: isbang/compose-action@v1.4.1
+        with:
+          compose-file: "./.github/docker/docker-compose.yml"
+      - name: Logs after playwright tests
+        run: docker-compose -f "./.github/docker/docker-compose.yml" logs
 
       - uses: actions/upload-artifact@v3
         if: always()
