--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,6 +102,7 @@ jobs:
         run: cd frontend && npx playwright test
 
       - uses: isbang/compose-action@v1.4.1
+        if: always()        
         with:
           compose-file: "./.github/docker/docker-compose.yml"
       - name: Logs after playwright tests
