--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,39 +8,39 @@ on:
       - "frontend/**"
 
 jobs:
-  # test-buildable:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v1
+  test-buildable:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
 
-  #     - name: Log in to Docker Hub
-  #       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v1
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_GITHUB_S3_PUSHER_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
-  #         aws-region: us-east-2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_GITHUB_S3_PUSHER_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
 
-  #     - name: Extract metadata (tags, labels) for Docker
-  #       id: meta
-  #       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-  #       with:
-  #         images: etenlab/crowd-rocks
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: etenlab/crowd-rocks
 
-  #     - name: Build and push Docker image
-  #       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-  #       with:
-  #         context: .
-  #         push: true
-  #         tags: etenlab/crowd-rocks:test
-  #         labels: ${{ steps.meta.outputs.labels }}
-  #         build-args: BUILD_MODE=test
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: etenlab/crowd-rocks:test
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: BUILD_MODE=test
 
   # test-api-e2e:
   #   runs-on: ubuntu-latest
@@ -69,7 +69,7 @@ jobs:
 
   test-frontend-playwright:
     runs-on: ubuntu-latest
-    # needs: test-buildable
+    needs: test-buildable
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -101,11 +101,8 @@ jobs:
       - name: Run Playwright tests
         run: cd frontend && npx playwright test
 
-      - uses: isbang/compose-action@v1.4.1
-        if: always()        
-        with:
-          compose-file: "./.github/docker/docker-compose.yml"
       - name: Logs after playwright tests
+        if: always()        
         run: docker-compose -f "./.github/docker/docker-compose.yml" logs
 
       - uses: actions/upload-artifact@v3
