--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     ports:
       - "5434:5432"
     volumes:
-      - ./postgres:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
